@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2007, 2018 IBM Corporation and others.
+ *  Copyright (c) 2007, 2023 IBM Corporation and others.
  *
  *  This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License 2.0
@@ -15,10 +15,12 @@
 package org.eclipse.equinox.internal.p2.metadata;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.eclipse.equinox.p2.metadata.IArtifactKey;
 import org.eclipse.equinox.p2.metadata.ICopyright;
 import org.eclipse.equinox.p2.metadata.IInstallableUnit;
@@ -34,37 +36,24 @@ import org.eclipse.equinox.p2.metadata.expression.IMatchExpression;
 import org.eclipse.equinox.p2.metadata.expression.IMemberProvider;
 
 public class ResolvedInstallableUnit implements IInstallableUnit, IMemberProvider {
-	private static IInstallableUnitFragment[] NO_IU = new IInstallableUnitFragment[0];
-
-	private final IInstallableUnitFragment[] fragments;
+	private final List<IInstallableUnitFragment> fragments;
 	protected final IInstallableUnit original;
 
 	public static final String MEMBER_ORIGINAL = "original"; //$NON-NLS-1$
 	public static final String MEMBER_FRAGMENTS = "fragments"; //$NON-NLS-1$
 
 	public ResolvedInstallableUnit(IInstallableUnit resolved) {
-		this(resolved, null);
+		this(resolved, List.of());
 	}
 
-	public ResolvedInstallableUnit(IInstallableUnit resolved, IInstallableUnitFragment[] fragments) {
+	public ResolvedInstallableUnit(IInstallableUnit resolved, List<IInstallableUnitFragment> fragments) {
 		this.original = resolved;
-		this.fragments = fragments == null ? NO_IU : fragments;
+		this.fragments = fragments;
 	}
 
 	@Override
 	public Collection<IInstallableUnitFragment> getFragments() {
-		int fcount = fragments.length;
-		if (fcount == 0)
-			return Collections.emptyList();
-
-		ArrayList<IInstallableUnitFragment> result = new ArrayList<>(fcount);
-		result.addAll(Arrays.asList(fragments));
-		for (int i = 0; i < fcount; i++) {
-			IInstallableUnit fragment = fragments[i];
-			if (fragment.isResolved())
-				result.addAll(fragment.getFragments());
-		}
-		return result;
+		return withFragmentElements(fragments, f -> f.isResolved() ? f.getFragments() : List.of());
 	}
 
 	@Override
@@ -99,54 +88,31 @@ public class ResolvedInstallableUnit implements IInstallableUnit, IMemberProvide
 
 	@Override
 	public Collection<IProvidedCapability> getProvidedCapabilities() {
-		Collection<IProvidedCapability> originalCapabilities = original.getProvidedCapabilities();
-		if (fragments.length == 0)
-			return originalCapabilities;
-
-		ArrayList<IProvidedCapability> result = new ArrayList<>(originalCapabilities);
-		for (IInstallableUnitFragment fragment : fragments) {
-			result.addAll(fragment.getProvidedCapabilities());
-		}
-		return result;
+		return withFragmentElements(original.getProvidedCapabilities(), IInstallableUnit::getProvidedCapabilities);
 	}
 
 	@Override
 	public Collection<IRequirement> getRequirements() {
-		Collection<IRequirement> originalCapabilities = original.getRequirements();
-		if (fragments.length == 0)
-			return originalCapabilities;
-
-		ArrayList<IRequirement> result = new ArrayList<>(originalCapabilities);
-		for (IInstallableUnitFragment fragment : fragments) {
-			result.addAll(fragment.getRequirements());
-		}
-		return result;
+		return withFragmentElements(original.getRequirements(), IInstallableUnit::getRequirements);
 	}
 
 	@Override
 	public Collection<IRequirement> getMetaRequirements() {
-		Collection<IRequirement> originalCapabilities = original.getMetaRequirements();
-		if (fragments.length == 0)
-			return originalCapabilities;
-
-		ArrayList<IRequirement> result = new ArrayList<>(originalCapabilities);
-		for (IInstallableUnitFragment fragment : fragments) {
-			result.addAll(fragment.getMetaRequirements());
-		}
-		return result;
+		return withFragmentElements(original.getMetaRequirements(), IInstallableUnit::getMetaRequirements);
 	}
 
 	@Override
 	public Collection<ITouchpointData> getTouchpointData() {
-		Collection<ITouchpointData> originalTouchpointData = original.getTouchpointData();
-		if (fragments.length == 0)
-			return originalTouchpointData;
+		return withFragmentElements(original.getTouchpointData(), IInstallableUnit::getTouchpointData);
+	}
 
-		ArrayList<ITouchpointData> result = new ArrayList<>(originalTouchpointData);
-		for (IInstallableUnitFragment fragment : fragments) {
-			result.addAll(fragment.getTouchpointData());
+	private <T> Collection<T> withFragmentElements(Collection<T> elements,
+			Function<IInstallableUnit, Collection<T>> getter) {
+		if (fragments.isEmpty()) {
+			return elements;
 		}
-		return result;
+		return Stream.concat(elements.stream(), fragments.stream().map(getter).flatMap(Collection::stream))
+				.collect(Collectors.toCollection(ArrayList::new));
 	}
 
 	@Override
@@ -168,22 +134,20 @@ public class ResolvedInstallableUnit implements IInstallableUnit, IMemberProvide
 	public boolean equals(Object obj) {
 		// TODO This is pretty ugly....
 		boolean result = original.equals(obj);
-		if (result)
+		if (result) {
 			return true;
-		if (obj instanceof ResolvedInstallableUnit)
-			return original.equals(((ResolvedInstallableUnit) obj).original);
-		return false;
+		}
+		return obj instanceof ResolvedInstallableUnit unit && original.equals(unit.original);
 	}
 
 	@Override
 	public int hashCode() {
-		// TODO Auto-generated method stub
 		return original.hashCode();
 	}
 
 	@Override
 	public String toString() {
-		return "[R]" + original.toString(); //$NON-NLS-1$
+		return "[R]" + original; //$NON-NLS-1$
 	}
 
 	public IInstallableUnit getOriginal() {
@@ -192,10 +156,7 @@ public class ResolvedInstallableUnit implements IInstallableUnit, IMemberProvide
 
 	@Override
 	public int compareTo(IInstallableUnit other) {
-		int cmp = getId().compareTo(other.getId());
-		if (cmp == 0)
-			cmp = getVersion().compareTo(other.getVersion());
-		return cmp;
+		return InstallableUnit.ID_FIRST_THEN_VERSION.compare(this, other);
 	}
 
 	@Override
@@ -240,37 +201,24 @@ public class ResolvedInstallableUnit implements IInstallableUnit, IMemberProvide
 
 	@Override
 	public Object getMember(String memberName) {
-		if (MEMBER_FRAGMENTS == memberName)
-			return fragments;
-		if (MEMBER_ORIGINAL == memberName)
-			return original;
-		if (InstallableUnit.MEMBER_PROVIDED_CAPABILITIES == memberName)
-			return getProvidedCapabilities();
-		if (InstallableUnit.MEMBER_ID == memberName)
-			return getId();
-		if (InstallableUnit.MEMBER_VERSION == memberName)
-			return getVersion();
-		if (InstallableUnit.MEMBER_PROPERTIES == memberName)
-			return getProperties();
-		if (InstallableUnit.MEMBER_FILTER == memberName)
-			return getFilter();
-		if (InstallableUnit.MEMBER_ARTIFACTS == memberName)
-			return getArtifacts();
-		if (InstallableUnit.MEMBER_REQUIREMENTS == memberName)
-			return getRequirements();
-		if (InstallableUnit.MEMBER_LICENSES == memberName)
-			return getLicenses();
-		if (InstallableUnit.MEMBER_COPYRIGHT == memberName)
-			return getCopyright();
-		if (InstallableUnit.MEMBER_TOUCHPOINT_DATA == memberName)
-			return getTouchpointData();
-		if (InstallableUnit.MEMBER_TOUCHPOINT_TYPE == memberName)
-			return getTouchpointType();
-		if (InstallableUnit.MEMBER_UPDATE_DESCRIPTOR == memberName)
-			return getUpdateDescriptor();
-		if (InstallableUnit.MEMBER_SINGLETON == memberName)
-			return Boolean.valueOf(isSingleton());
-		throw new IllegalArgumentException("No such member: " + memberName); //$NON-NLS-1$
+		return switch (memberName) {
+		case MEMBER_FRAGMENTS -> fragments.toArray(IInstallableUnitFragment[]::new);
+		case MEMBER_ORIGINAL -> original;
+		case InstallableUnit.MEMBER_PROVIDED_CAPABILITIES -> getProvidedCapabilities();
+		case InstallableUnit.MEMBER_ID -> getId();
+		case InstallableUnit.MEMBER_VERSION -> getVersion();
+		case InstallableUnit.MEMBER_PROPERTIES -> getProperties();
+		case InstallableUnit.MEMBER_FILTER -> getFilter();
+		case InstallableUnit.MEMBER_ARTIFACTS -> getArtifacts();
+		case InstallableUnit.MEMBER_REQUIREMENTS -> getRequirements();
+		case InstallableUnit.MEMBER_LICENSES -> getLicenses();
+		case InstallableUnit.MEMBER_COPYRIGHT -> getCopyright();
+		case InstallableUnit.MEMBER_TOUCHPOINT_DATA -> getTouchpointData();
+		case InstallableUnit.MEMBER_TOUCHPOINT_TYPE -> getTouchpointType();
+		case InstallableUnit.MEMBER_UPDATE_DESCRIPTOR -> getUpdateDescriptor();
+		case InstallableUnit.MEMBER_SINGLETON -> isSingleton();
+		default -> throw new IllegalArgumentException("No such member: " + memberName); //$NON-NLS-1$
+		};
 	}
 
 }
